<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_policy_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/setting_policy_terms"
            android:paddingLeft="15dp"
            android:textColor="@color/grayText"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:src="@drawable/p38_bt_grayright" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_policy_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/setting_policy_privacy"
            android:paddingLeft="15dp"
            android:textColor="@color/grayText"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:src="@drawable/p38_bt_grayright" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_policy_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/setting_policy_manage"
            android:paddingLeft="15dp"
            android:textColor="@color/grayText"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:src="@drawable/p38_bt_grayright" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_policy_open_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/setting_policy_open_source"
            android:paddingLeft="15dp"
            android:textColor="@color/grayText"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:src="@drawable/p38_bt_grayright" />
    </LinearLayout>

    <!--
    <WebView
        android:layout_marginTop="15dp"
        android:id="@+id/wb_policy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></WebView>
        -->

</LinearLayout>